--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "typescript": "~5.0.4",
     "unocss": "^0.53.5",
     "vite": "^4.3.9",
+    "vite-plugin-vsharp": "^1.4.2",
     "vitest": "^0.32.0",
     "vue-tsc": "^1.6.5"
   }
